// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored progress bar 1`] = `
<View
  accessible={true}
  aria-busy={true}
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={20}
  onLayout={[Function]}
  role="progressbar"
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`renders hidden progress bar 1`] = `
<View
  accessible={true}
  aria-busy={false}
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={20}
  onLayout={[Function]}
  role="progressbar"
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`renders indeterminate progress bar 1`] = `
<View
  accessible={true}
  aria-busy={true}
  onLayout={[Function]}
  role="progressbar"
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`renders progress bar with specific progress 1`] = `
<View
  accessible={true}
  aria-busy={true}
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={20}
  onLayout={[Function]}
  role="progressbar"
  style={false}
  testID="progress-bar"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  />
</View>
`;
